# PyUncertainNumber

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  a.py  matplotlibrc.txt  pyproject.toml  reference.md  requirements.txt  setup.py  todo.tasks
.github/workflows/: test.yml  (+3 more)
_personal/: API_list.md  EX_SME_assignment_byYuChen.ipynb  glossary.md  progress.md  reference.md
docs/: TODO_and_checklist.md  requirements.txt
examples/: create_distribution_within_UN.py
joss_paper/: hint.md  paper.bib  paper.crossref  paper.md  pool.md  todo.todo
notebooks/: Test_hedges_interpretation.ipynb  Test_interval_expressive_consructor.ipynb
results/: UN_Dist_object.json  UN_dist_uni.json  UN_interval_uni.json  ancillary_UN.json  cantiliver_ex_inputs_data.json  mulUN_data.json
test/: T_scott_MoM13.py  nick_pba_test.py  pbox_test.py
tests/: Test_2dof.py  Test_KNN.py  Test_NASA_UQ_Filtering_Example.py  conftest.py  mytrace.pickle  pbox_plot.py  read_trace.ipynb  sobol_test.py  status_file_2DOF.txt  test_aggregation.py  test_construction.py  test_dss_arithmetic.py  test_np_support.py  test_pbox.py  test_sobol.py  test_tmcmc_2dof.py  test_uncertain_MC_analysis_simplified_drag.py  test_uncertain_analysis_simplified_drag.py  tmcmc_trace_N500_inside.pkl  varied_discretisation_plot.py
user_dir/: performance_func.py
visualisation/: dynamic_pbox_animation.py  instantiation_demo.py
workshop_Dec2024/: UP_demonstration[CantileverBbeam].ipynb  UP_demontration[XFOIL example].ipynb  about.md  cantiliver_beam_ex.ipynb  installation.ipynb  lab_session.ipynb
(+719 files in other folders)
